--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ before_script:
   # Install dependencies.
   - sudo apt-get update
   - sudo apt-get install -y openjdk-8-jre-headless xvfb libxi6 libgconf-2-4
+  - sudo apt-get install xvfb -y
 
   # Install Chrome.
   - wget -N https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -P ~/
@@ -49,5 +50,5 @@ script:
   - bundle exec rails db:create
   - bundle exec rails db:structure:load
   - bundle exec rails db:seed
-  - rake ci
+  - HEADLESS=on rake ci
   - CODECLIMATE_REPO_TOKEN=0a7c2a9ff76974762fbe7151d5e4aa171f8a86682672d0b32d52ae46b10b3f44 bundle exec codeclimate-test-reporter
