--- a/.travis.yml
+++ b/.travis.yml
@@ -50,5 +50,6 @@ script:
   - bundle exec rails db:create
   - bundle exec rails db:structure:load
   - bundle exec rails db:seed
+  - CODECOV_TOKEN=e5f8d659-68e3-4dee-bbf7-96cda9a20a4d
   - HEADLESS=on rake ci
   - CODECLIMATE_REPO_TOKEN=0a7c2a9ff76974762fbe7151d5e4aa171f8a86682672d0b32d52ae46b10b3f44 bundle exec codeclimate-test-reporter
