add version of chrome 59.0

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -12,7 +12,7 @@ install:
   - gem compile bcrypt-3.1.11.gem
   - gem install ./bcrypt-3.1.11-x86-mingw32.gem
   - cd ..
-  - choco install chrome
+  - choco install chrome --version 59.0
   - choco install xvfb
   - bundle install
 build: off
