--- a/appveyor.yml
+++ b/appveyor.yml
@@ -23,4 +23,4 @@ test_script:
   - bundle exec rails db:structure:load
   - bundle exec rails db:seed
   - set RAILS_ENV=test
-  - bundle exec rspec
+  - rake ci
