--- a/circle.yml
+++ b/circle.yml
@@ -1,31 +1,49 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/appName
+    working_directory: ~/circleci-demo-ruby-rails
     docker:
-      - image: ruby:2.3.1
+      - image: circleci/ruby:2.4.1-node
         environment:
-        - PG_HOST=localhost
-        - PG_USER=ubuntu
-        - RAILS_ENV=test
-        - RACK_ENV=test
-      - image: postgres:9.5
+          RAILS_ENV: test
+          PGHOST: 127.0.0.1
+          PGUSER: root
+      - image: circleci/postgres:9.6.2-alpine
         environment:
-        - POSTGRES_USER=ubuntu
-        - POSTGRES_DB=db_name
+          POSTGRES_USER: root
+          POSTGRES_DB: circle-test_test
     steps:
       - checkout
-      - name: Install System Dependencies
-        command: apt-get update -qq && apt-get install -y build-essential postgresql libpq-dev nodejs rake
-      - name: Install Ruby Dependencies
-        command: bundle install
-      - name: Set up DB
-        command: |
-          bundle exec rails db:create
-          bundle exec rails db:structure:load
-          bundle exec rails db:seed
-        environment:
-          DATABASE_URL: "postgres://ubuntu@localhost:5432/db_name"
+
+      # Restore bundle cache
+      - restore_cache:
+          keys:
+            - rails-demo-{{ checksum "Gemfile.lock" }}
+            - rails-demo-
+
+      # Bundle install dependencies
       - run:
-          name: Run tests
+          name: Install dependencies
+          command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs 4 --retry 3
+
+      - run: sudo apt install postgresql-client
+
+      # Store bundle cache
+      - save_cache:
+          key: rails-demo-{{ checksum "Gemfile.lock" }}
+          paths:
+            - vendor/bundle
+
+      - run:
+          name: Database Setup
+          command: |
+            bundle exec rails db:create
+            bundle exec rails db:structure:load
+            bundle exec rails db:seed
+      - run:
+          name: Parallel RSpec
           command: rake ci
+
+      # Save artifacts
+      - store_test_results:
+          path: /tmp/test-results
