--- a/circle.yml
+++ b/circle.yml
@@ -1,4 +1,10 @@
 version: 2
+test:
+  pre:
+    - wget http://chromedriver.storage.googleapis.com/2.22/chromedriver_linux32.zip
+    - unzip chromedriver_linux32.zip
+    - ./chromedriver --port=4444 --url-base=we/hub:
+        background: true
 jobs:
   build:
     working_directory: ~/circleci-demo-ruby-rails
