--- a/circle.yml
+++ b/circle.yml
@@ -26,6 +26,7 @@ jobs:
           name: Install dependencies
           command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs 4 --retry 3
 
+      - run: sudo apt install postgresql-client
       # Install dependencies.
       - run: sudo apt-get update
 
@@ -37,6 +38,11 @@ jobs:
       - run: sudo chmod +x /usr/local/share/chromedriver
       - run: sudo ln -s /usr/local/share/chromedriver /usr/local/bin/chromedriver
 
+      # Install Selenium.
+      - run: wget -N http://selenium-release.storage.googleapis.com/3.0/selenium-server-standalone-3.0.1.jar -P ~/
+      - run: sudo mv -f ~/selenium-server-standalone-3.0.1.jar /usr/local/share/
+      - run: sudo chmod +x /usr/local/share/selenium-server-standalone-3.0.1.jar
+      - run: sudo ln -s /usr/local/share/selenium-server-standalone-3.0.1.jar /usr/local/bin/selenium-server-standalone-3.0.1.jar
       # Store bundle cache
       - save_cache:
           key: rails-demo-{{ checksum "Gemfile.lock" }}
