--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ jobs:
           PGHOST: 127.0.0.1
           PGUSER: root
       - image: circleci/postgres:9.6.2-alpine
+      - image: selenium/standalone-chrome:3.1.0
         environment:
           POSTGRES_USER: root
           POSTGRES_DB: circle-test_test
