--- a/circle.yml
+++ b/circle.yml
@@ -23,28 +23,6 @@ jobs:
             - rails-demo-
 
       - run: sudo apt install postgresql-client
-      # Install dependencies.
-      - run: sudo apt-get update
-
-      # Update Google Chrome.
-      - run: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
-      - run: sudo sh -c 'echo "deb [arch=amd64] http://dl.google.com/linux/chrome/deb stable main" >> /etc/apt/sources.list.d/google.list'
-      - run: sudo apt-get update
-      - run: sudo apt-get
-
-      # Install ChromeDriver.
-      - run: wget -N http://chromedriver.storage.googleapis.com/2.27/chromedriver_linux64.zip -P ~/
-      - run: unzip ~/chromedriver_linux64.zip -d ~/
-      - run: rm ~/chromedriver_linux64.zip
-      - run: sudo mv -f ~/chromedriver /usr/local/share/
-      - run: sudo chmod +x /usr/local/share/chromedriver
-      - run: sudo ln -s /usr/local/share/chromedriver /usr/local/bin/chromedriver
-
-      # Install Selenium.
-      - run: wget -N http://selenium-release.storage.googleapis.com/3.0/selenium-server-standalone-3.0.1.jar -P ~/
-      - run: sudo mv -f ~/selenium-server-standalone-3.0.1.jar /usr/local/share/
-      - run: sudo chmod +x /usr/local/share/selenium-server-standalone-3.0.1.jar
-      - run: sudo ln -s /usr/local/share/selenium-server-standalone-3.0.1.jar /usr/local/bin/selenium-server-standalone-3.0.1.jar
 
       # Bundle install dependencies
       - run:
@@ -63,7 +41,7 @@ jobs:
             bundle exec rails db:seed
       - run:
           name: Parallel RSpec
-          command: HEADLESS=on rake ci
+          command: rake ci
 
       # Save artifacts
       - store_test_results:
