--- a/circle.yml
+++ b/circle.yml
@@ -32,12 +32,18 @@ jobs:
       - run: sudo apt-get
 
       # Install ChromeDriver.
-      - run: wget -N http://chromedriver.storage.googleapis.com/2.29/chromedriver_linux64.zip -P ~/
+      - run: wget -N http://chromedriver.storage.googleapis.com/2.9/chromedriver_linux64.zip -P ~/
       - run: unzip ~/chromedriver_linux64.zip -d ~/
       - run: rm ~/chromedriver_linux64.zip
       - run: sudo mv -f ~/chromedriver /usr/local/share/
       - run: sudo chmod +x /usr/local/share/chromedriver
       - run: sudo ln -s /usr/local/share/chromedriver /usr/local/bin/chromedriver
+
+      # Install Selenium.
+      - run: wget -N http://selenium-release.storage.googleapis.com/3.4/selenium-server-standalone-3.4.0.jar -P ~/
+      - run: sudo mv -f ~/selenium-server-standalone-3.4.0.jar /usr/local/share/
+      - run: sudo chmod +x /usr/local/share/selenium-server-standalone-3.4.0.jar
+      - run: sudo ln -s /usr/local/share/selenium-server-standalone-3.4.0.jar /usr/local/bin/selenium-server-standalone-3.4.0.jar
 
       # Bundle install dependencies
       - run:
