--- a/circle.yml
+++ b/circle.yml
@@ -46,6 +46,9 @@ jobs:
       - run: sudo chmod +x /usr/local/share/selenium-server-standalone-3.4.0.jar
       - run: sudo ln -s /usr/local/share/selenium-server-standalone-3.4.0.jar /usr/local/bin/selenium-server-standalone-3.4.0.jar
 
+      # Display socket is taken but lock file is missing
+      - run: pkill Xvfb
+
       # https://github.com/leonid-shevtsov/headless/issues/47
       - run: mkdir /tmp/.X11-unix
       - run: sudo chmod 1777 /tmp/.X11-unix
