--- a/.circleci/circle.yml
+++ b/.circleci/circle.yml
@@ -1,6 +1,7 @@
 version: 2
 jobs:
   build:
+    parallelism: 3
     working_directory: ~/circleci-demo-ruby-rails
     docker:
       - image: circleci/ruby:2.4.1-node
@@ -17,12 +18,15 @@ jobs:
       - checkout
 
       # Restore bundle cache
-      - restore_cache:
-          keys:
-            - rails-demo-{{ checksum "Gemfile.lock" }}
-            - rails-demo-
+      - type: cache-restore
+        key: rails-demo-{{ checksum "Gemfile.lock" }}
 
       - run: sudo apt install postgresql-client
+      # Bundle install dependencies
+      - run:
+          name: Install dependencies
+          command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs 4 --retry 3
+
       # Install dependencies.
       - run: sudo apt-get install xvfb -y
       - run: sudo apt-get install libnss3
@@ -57,10 +61,7 @@ jobs:
       - run: sudo chmod 1777 /tmp/.X11-unix
       - run: sudo chown root /tmp/.X11-unix/
 
-      # Bundle install dependencies
-      - run:
-          name: Install dependencies
-          command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs 4 --retry 3
+
       # Store bundle cache
       - save_cache:
           key: rails-demo-{{ checksum "Gemfile.lock" }}
@@ -72,9 +73,9 @@ jobs:
             bundle exec rails db:create
             bundle exec rails db:structure:load
             bundle exec rails db:seed
-      - run:
-          name: Parallel RSpec
-          command: HEADLESS=on bundle exec rspec
+
+      - type: shell
+        command: HEADLESS=on rake ci
 
       # Save artifacts
       - store_test_results:
