--- a/circle.yml
+++ b/circle.yml
@@ -60,7 +60,6 @@ jobs:
       - run: sudo chmod 1777 /tmp/.X11-unix
       - run: sudo chown root /tmp/.X11-unix/
 
-
       # Store bundle cache
       - save_cache:
           key: rails-demo-{{ checksum "Gemfile.lock" }}
@@ -72,9 +71,14 @@ jobs:
             bundle exec rails db:create
             bundle exec rails db:structure:load
             bundle exec rails db:seed
-      - run:
-          name: Parallel RSpec
-          command: HEADLESS=on rake ci
+      # Run rspec in parallel
+      - type: shell
+        command: |
+          HEADLESS=on bundle exec rspec --profile 10 \
+                            --format RspecJunitFormatter \
+                            --out /tmp/test-results/rspec.xml \
+                            --format progress \
+                            $(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)
 
       # Save artifacts
       - store_test_results:
