--- a/circle.yml
+++ b/circle.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/circleci-demo-ruby-rails
     docker:
-      - image: circleci/ruby:2.4.1-node
+      - image: circleci/ruby:2.4.1
         environment:
           RAILS_ENV: test
           PGHOST: 127.0.0.1
@@ -29,7 +29,6 @@ jobs:
       # Install dependencies.
       - run: sudo apt-get install xvfb -y
       - run: sudo apt-get install libnss3
-      - run: gem uninstall chromedriver-helper
       - run: gem install webdrivers
 
       # Update Google Chrome.
