--- a/circle.yml
+++ b/circle.yml
@@ -32,7 +32,9 @@ jobs:
       - run: SELENIUM_SUBDIR=$(echo "$SELENIUM_STANDALONE_VERSION" | cut -d"." -f-2)
 
       # Install dependencies.
+      - run: sudo add-apt-repository ppa:webupd8team/java
       - run: sudo apt-get update
+      - run: sudo apt-get install oracle-java8-installer
       - run: sudo apt-get install -y unzip openjdk-8-jre-headless xvfb libxi6 libgconf-2-4
 
       # Install Chrome.
