--- a/circle.yml
+++ b/circle.yml
@@ -33,6 +33,7 @@ jobs:
 
       # Install dependencies.
       - run: sudo apt-get install software-properties-common
+      - run: sudo apt-get update
       - run: sudo add-apt-repository ppa:webupd8team/java
       - run: sudo apt-get update
       - run: sudo apt-get install oracle-java8-installer
