--- a/circle.yml
+++ b/circle.yml
@@ -34,7 +34,7 @@ jobs:
       # Install dependencies.
       - run: sudo apt-get install software-properties-common
       - run: sudo add-apt-repository ppa:webupd8team/java
-      - run: sudo su (login as root)
+      - run: sudo su
       - run: cd /var/lib/apt/lists/
       - run: rm -fr *
       - run: cd /etc/apt/sources.list.d/
