--- a/circle.yml
+++ b/circle.yml
@@ -34,11 +34,11 @@ jobs:
       # Install dependencies.
       - run: sudo apt-get install software-properties-common
       - run: sudo add-apt-repository ppa:webupd8team/java
-      - run: sudo cd /var/lib/apt/lists/
+      - run: cd /var/lib/apt/lists/
       - run: sudo rm -fr *
-      - run: sudo cd /etc/apt/sources.list.d/
+      - run: cd /etc/apt/sources.list.d/
       - run: sudo rm -fr *
-      - run: sudo cd /etc/apt
+      - run: cd /etc/apt
       - run: sudo cp sources.list sources.list.old
       - run: sudo cp sources.list sources.list.tmp
       - run: sudo sed 's/ubuntuarchive.hnsdc.com/us.archive.ubuntu.com/' sources.list.tmp | sudo tee sources.list
