--- a/circle.yml
+++ b/circle.yml
@@ -34,10 +34,7 @@ jobs:
       # Install dependencies.
       - run: sudo apt-get install software-properties-common
       - run: sudo add-apt-repository ppa:webupd8team/java
-      - run: sudo cp /etc/apt/sources.list ~/
-      - run: sudo wget "http://pastebin.com/raw.php?i=uzhrtg5M" -O /etc/apt/sources.list
-      - run: sudo apt-get update
-      - run: sudo rm /etc/apt/sources.list.d/ubuntu-extras.list
+      - run: sudo rm -f /var/cache/apt/archives/{partial/,}* /var/lib/apt/lists/{partial/,}*
       - run: sudo apt-get clean
       - run: sudo apt-get update
       - run: sudo apt-get install oracle-java8-installer
