--- a/circle.yml
+++ b/circle.yml
@@ -33,11 +33,10 @@ jobs:
 
       # Install dependencies.
       - run: sudo apt-get install software-properties-common
-      - run: sudo add-apt-repository ppa:webupd8team/java
-      - run: sudo rm -f /var/cache/apt/archives/{partial/,}* /var/lib/apt/lists/{partial/,}*
-      - run: sudo apt-get clean
+      - run: lsb_release --a
       - run: sudo apt-get update
-      - run: sudo apt-get install oracle-java8-installer
+      - run: sudo add-apt-repository ppa:webupd8team/java
+      #- run: sudo apt-get install oracle-java8-installer
       - run: sudo apt-get install -y unzip openjdk-8-jre-headless xvfb libxi6 libgconf-2-4
 
       # Install Chrome.
