--- a/circle.yml
+++ b/circle.yml
@@ -37,7 +37,7 @@ jobs:
       - run: sudo apt-get update
       - run: sudo add-apt-repository ppa:webupd8team/java
       #- run: sudo apt-get install oracle-java8-installer
-      - run: sudo apt-get install -y unzip openjdk-8-jre-headless xvfb libxi6 libgconf-2-4
+      - run: sudo apt-get install -y unzip xvfb libxi6 libgconf-2-4
 
       # Install Chrome.
       - run: wget -N https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -P ~/
