--- a/circle.yml
+++ b/circle.yml
@@ -36,7 +36,7 @@ jobs:
       - run: lsb_release --a
       - run: sudo apt-get update
       - run: sudo add-apt-repository ppa:webupd8team/java
-      #- run: sudo apt-get install oracle-java8-installer
+      - run: sudo apt install -t jessie-backports  openjdk-8-jre-headless ca-certificates-java
       - run: sudo apt-get install -y unzip xvfb libxi6 libgconf-2-4
 
       # Install Chrome.
