--- a/circle.yml
+++ b/circle.yml
@@ -36,8 +36,8 @@ jobs:
       - run: lsb_release --a
       - run: sudo apt-get update
       - run: sudo add-apt-repository ppa:webupd8team/java
-      - run: sudo apt install -t jessie-backports  openjdk-8-jre-headless ca-certificates-java
-      - run: sudo apt-get install -y unzip xvfb libxi6 libgconf-2-4
+      - run: deb http://ftp.debian.org/debian testing main
+      - run: sudo apt-get install -y unzip openjdk-8-jre-headless xvfb libxi6 libgconf-2-4
 
       # Install Chrome.
       - run: wget -N https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -P ~/
