--- a/circle.yml
+++ b/circle.yml
@@ -36,7 +36,7 @@ jobs:
       - run: lsb_release --a
       - run: sudo apt-get update
       - run: sudo add-apt-repository ppa:webupd8team/java
-      - run: deb http://ftp.debian.org/debian testing main
+      - run: echo "deb http://ftp.debian.org/debian testing main" | sudo tee -a /etc/apt/sources.list
       - run: sudo apt-get install -y unzip openjdk-8-jre-headless xvfb libxi6 libgconf-2-4
 
       # Install Chrome.
