--- a/circle.yml
+++ b/circle.yml
@@ -34,9 +34,8 @@ jobs:
       # Install dependencies.
       - run: sudo apt-get install software-properties-common
       - run: lsb_release --a
+      - run: sudo add-apt-repository ppa:openjdk-r/ppa
       - run: sudo apt-get update
-      - run: sudo add-apt-repository ppa:webupd8team/java
-      - run: echo "deb http://ftp.debian.org/debian testing main" | sudo tee -a /etc/apt/sources.list
       - run: sudo apt-get install -y unzip openjdk-8-jre-headless xvfb libxi6 libgconf-2-4
 
       # Install Chrome.
