--- a/circle.yml
+++ b/circle.yml
@@ -34,9 +34,8 @@ jobs:
       # Install dependencies.
       - run: sudo apt-get install software-properties-common
       - run: lsb_release --a
-      - run: sudo add-apt-repository ppa:openjdk-r/ppa
       - run: sudo apt-get update
-      - run: sudo apt-get install -y unzip openjdk-8-jre-headless xvfb libxi6 libgconf-2-4
+      - run: sudo apt-get install -y unzip xvfb libxi6 libgconf-2-4
 
       # Install Chrome.
       - run: wget -N https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -P ~/
