--- a/circle.yml
+++ b/circle.yml
@@ -37,11 +37,11 @@ jobs:
       - run: sudo apt-get update
       - run: sudo apt-get install -y unzip xvfb libxi6 libgconf-2-4
 
-      # Install Chrome.
-      - run: wget -N https://dl.google.com/linux/direct/google-chrome-stable_current_amd64.deb -P ~/
-      - run: sudo dpkg -i --force-depends ~/google-chrome-stable_current_amd64.deb
-      - run: sudo apt-get -f install -y
-      - run: sudo dpkg -i --force-depends ~/google-chrome-stable_current_amd64.deb
+      # Install Chrome for Debian.
+      - run: sudo vi /etc/apt/sources.list
+      - run: deb http://dl.google.com/linux/chrome/deb/ stable main
+      - run: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+      - run: sudo apt-get update && sudo apt-get install google-chrome-stable
 
       # Install ChromeDriver.
       - run: wget -N http://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip -P ~/
