--- a/circle.yml
+++ b/circle.yml
@@ -38,8 +38,7 @@ jobs:
       - run: sudo apt-get install -y unzip xvfb libxi6 libgconf-2-4
 
       # Install Chrome for Debian.
-      - run: sudo vi /etc/apt/sources.list
-      - run: deb http://dl.google.com/linux/chrome/deb/ stable main
+      - run: echo "deb http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee -a /etc/apt/sources.list
       - run: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
       - run: sudo apt-get update && sudo apt-get install google-chrome-stable
 
