rebase alot of commits

--- a/circle.yml
+++ b/circle.yml
@@ -3,37 +3,68 @@ jobs:
   build:
     working_directory: ~/circleci-demo-ruby-rails
     docker:
-      - image: circleci/ruby:2.4.1-node
+      - image: circleci/ruby:2.4.1
         environment:
           RAILS_ENV: test
           PGHOST: 127.0.0.1
           PGUSER: root
-      - image: circleci/postgres:9.6.2-alpine
+      - image: circleci/postgres:9.6.2
         environment:
           POSTGRES_USER: root
           POSTGRES_DB: circle-test_test
+      - image: selenium/standalone-chrome:3.4.0
     steps:
       - checkout
 
       # Restore bundle cache
-      - restore_cache:
-          keys:
-            - rails-demo-{{ checksum "Gemfile.lock" }}
-            - rails-demo-
+      - type: cache-restore
+        key: rails-demo-{{ checksum "Gemfile.lock" }}
 
+      - run: sudo apt install postgresql-client
       # Bundle install dependencies
       - run:
           name: Install dependencies
           command: bundle check --path=vendor/bundle || bundle install --path=vendor/bundle --jobs 4 --retry 3
 
-      - run: sudo apt install postgresql-client
+      # Versions
+      - run: CHROME_DRIVER_VERSION=2.9
+      - run: SELENIUM_STANDALONE_VERSION=3.4.0
+      - run: SELENIUM_SUBDIR=$(echo "$SELENIUM_STANDALONE_VERSION" | cut -d"." -f-2)
+
+      # Install dependencies.
+      - run: sudo apt-get install software-properties-common
+      - run: lsb_release --a
+      - run: sudo apt-get update
+      - run: sudo apt-get install -y unzip xvfb libxi6 libgconf-2-4
+
+      # Install Chrome for Debian.
+      - run: echo "deb http://dl.google.com/linux/chrome/deb/ stable main" | sudo tee -a /etc/apt/sources.list
+      - run: wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add -
+      - run: sudo apt-get update && sudo apt-get install google-chrome-stable
+
+      # Install ChromeDriver.
+      - run: wget -N http://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip -P ~/
+      - run: unzip ~/chromedriver_linux64.zip -d ~/
+      - run: rm ~/chromedriver_linux64.zip
+      - run: sudo mv -f ~/chromedriver /usr/local/bin/chromedriver
+      - run: sudo chown root:root /usr/local/bin/chromedriver
+      - run: sudo chmod 0755 /usr/local/bin/chromedriver
+
+      # Install Selenium.
+      - run: wget -N http://selenium-release.storage.googleapis.com/$SELENIUM_SUBDIR/selenium-server-standalone-$SELENIUM_STANDALONE_VERSION.jar -P ~/
+      - run: sudo mv -f ~/selenium-server-standalone-$SELENIUM_STANDALONE_VERSION.jar /usr/local/bin/selenium-server-standalone.jar
+      - run: sudo chown root:root /usr/local/bin/selenium-server-standalone.jar
+      - run: sudo chmod 0755 /usr/local/bin/selenium-server-standalone.jar
+
+      # Install xvfb
+      - run: sudo apt-get install xvfb -y
+      - run: sudo pkill Xvfb
 
       # Store bundle cache
       - save_cache:
           key: rails-demo-{{ checksum "Gemfile.lock" }}
           paths:
             - vendor/bundle
-
       - run:
           name: Database Setup
           command: |
@@ -42,7 +73,7 @@ jobs:
             bundle exec rails db:seed
       - run:
           name: Parallel RSpec
-          command: rake ci
+          command: HEADLESS=on rake ci
 
       # Save artifacts
       - store_test_results:
